--- a/v-model原理.html
+++ b/v-model原理.html
@@ -23,7 +23,7 @@
         document.getElementById('inputValue').innerText=newvalue
       }
     })
-    document.getElementById('input').addEventListener('keyup',function(){
+    document.getElementById('input').addEventListener('input',function(){
       obj.value=event.target.value
     })
   </script>
